feat(items): manage photo galleries
